# joinmarket-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  deny.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
crates/joinmarket-core/: Cargo.toml
crates/joinmarket-core/src/: config.rs  crypto.rs  fidelity_bond.rs  handshake.rs  lib.rs  message.rs  nick.rs  onion.rs
crates/joinmarket-dn/: Cargo.toml
crates/joinmarket-dn/src/: admission.rs  bond_registry.rs  heartbeat.rs  lib.rs  main.rs  metrics.rs  peer.rs  router.rs  server.rs  sybil_guard.rs
crates/joinmarket-dn/tests/: integration.rs
crates/joinmarket-tor/: Cargo.toml
crates/joinmarket-tor/src/: arti_backend.rs  ctor_backend.rs  lib.rs  mock.rs  provider.rs
docs/: architecture.md  deployment.md  development.md  protocol.md
tests/fixtures/: handshake_maker.json  handshake_taker.json  messages.txt
